# Traffic

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.py  database.py  docker-compose.yml  ingest.py  main.py  models.py  nginx.conf  notebook.ipynb  pyproject.toml  repos.py  requirements.txt  schemas.py
alembic/: env.py
alembic/versions/: 001_initial.py  003_add_day_hour_index.py  004_create_daily_speeds.py
services/: cache.py
tests/: conftest.py
tests/test_api/: test_aggregates.py  test_edge_cases.py  test_link_detail.py  test_slow_links.py  test_spatial_filter.py
tests/test_repos/: test_traffic_repo.py
